Probeer meerdere files te uploaden AAAAAAAAAA

--- a/Minder/Minder.csproj
+++ b/Minder/Minder.csproj
@@ -4556,7 +4556,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Content\Uploads\" />
+    <Folder Include="Content\Uploads\PhotoAlbum\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
