--- a/Minder/Minder.csproj
+++ b/Minder/Minder.csproj
@@ -216,6 +216,7 @@
     <Compile Include="Models\Interest.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Message.cs" />
+    <Compile Include="Models\PhotoAlbum.cs" />
     <Compile Include="Models\Picture.cs" />
     <Compile Include="Models\Profile.cs" />
     <Compile Include="Models\ProfileResultViewModel.cs" />
