--- a/Minder/Minder.csproj
+++ b/Minder/Minder.csproj
@@ -205,10 +205,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201802090032502_doe het.cs" />
-    <Compile Include="Migrations\201802090032502_doe het.Designer.cs">
-      <DependentUpon>201802090032502_doe het.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Enums.cs" />
@@ -218,6 +214,7 @@
     <Compile Include="Models\Message.cs" />
     <Compile Include="Models\Picture.cs" />
     <Compile Include="Models\Profile.cs" />
+    <Compile Include="Models\ProfileRepository.cs" />
     <Compile Include="Models\ProfileResultViewModel.cs" />
     <Compile Include="Models\ProfileSearchViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -4599,6 +4596,7 @@
     <Content Include="Views\Messages\Details.cshtml" />
     <Content Include="Views\Messages\Edit.cshtml" />
     <Content Include="Views\Messages\Index.cshtml" />
+    <Content Include="Views\Profile\_SearchProfileResultsPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -4614,11 +4612,6 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201802090032502_doe het.resx">
-      <DependentUpon>201802090032502_doe het.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
